<resources>
    <string name="app_name">Virtual Hospital</string>
    <string name="action_settings">Settings</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name_placeholder">Enter Your Username</string>
    <string name="password_placeholder">Enter Your Password</string>
    <string name="email_placeholder">Enter Your Email</string>


    <string name="title_activity_login_activity.java">Sign in</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to CreateAccount -->
    <string name="account_created_successfully">Account created successfully</string>
    <string name="error">error</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to ViewProfile -->
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="first_name_placeholder">Enter Your First Name</string>
    <string name="last_name_placeholder">Enter Your Last Name</string>
    <string name="phone_placeholder">Enter Your Phone Number</string>
    <string name="save_button">save</string>
    <string name="cancel_button">cancel</string>
    <string name="change_password_button">change password</string>
    <string name="same_email">You entered the same email</string>

    <!-- Strings related to UpdateHealthRecord -->
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="chronic_diseases">Chronic Diseases</string>
    <string name="weight_placeholder">Enter your weight</string>
    <string name="height_placeholder">Enter your height</string>
    <string name="age_placeholder">Enter your age</string>
    <string name="hypertension">Hypertension</string>
    <string name="diabetes">Diabetes</string>
    <string name="other">Other</string>
    <string name="other_text_field">Enter other chronic diseases</string>
    <string name="medical_history">Medical History</string>
    <string name="update_button">Update</string>
    <string name="pdf_viewer">There is no application to view the file</string>
    <string name="inappropriate_file">The item chosen is inappropriate file</string>
    <string name="send_file">Upload File</string>
    <string name="waiting">Please wait...</string>
    <string name="success_upload">File uploaded successfully</string>
    <string name="failed_upload">Problem occurred while uploading.</string>
    <string name="failed_upload2">Do you want to resend the file?</string>
    <string name="resend_button">Resend</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="download">Downloading...</string>
    <string name="success_download">File downloaded successfully</string>
    <string name="fail_download">Problem occurred while downloading</string>
    <string name="open_menuitem">Open</string>
    <string name="delete_menuitem">Delete</string>
    <string name="save_menuitem">Save</string>
    <string name="data_fetch_error">An error occurred </string>
    <string name="delete_file">Delete File</string>
    <string name="delete_message">This file will be deleted permanently.\nIf you want to save it, click on save.\nDo you want to delete it?</string>
    <string name="delete_yes_button">Yes</string>
    <string name="delete_no_button">No</string>
    <string name="file_not_found">File is not found</string>
    <string name="success_delete">File deleted successfully</string>
    <string name="fail_delete">There is problem in deletion process</string>

    <!-- global strings -->
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_update_health_record">Update Health Record</string>

    <!-- Strings related to MakeAppointmentFragment -->
    <string name="choose_doctor_text_view">Choose Doctor:</string>
    <string name="submit_appointment">Submit</string>
    <string name="available">Available</string>
    <string name="booked">Booked</string>
    <string name="appointment_created_successfully">Appointment Created Successfully</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="cancel_appointment_message">Do You Want to Cancel the Appointment ?</string>
    <string name="cancel_appointment_button">Submit</string>
    <string name="appointment_status_pending">Pending</string>
    <string name="appointment_status_confirmed">Confirmed</string>
    <string name="login">Login</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="make_appointment_message">Are You Sure You Want to Reserve This Time Slot ?</string>
    <string name="make_appointment_button">Submit</string>


</resources>
